Update: botões de exportação funcionando.

--- a/project/dashboard.html
+++ b/project/dashboard.html
@@ -12,13 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body id=content>
     <header class="header">
         <img class="logo" src="assets/imagens/icons/logo.svg" alt="">
         <div class="header-right">
-            <div class="toggle-menu" onclick="toggleFloatingMenu()"><img src="assets/imagens/icons/Subtract.svg" alt=""></div>
+            <div class="toggle-menu" onclick="toggleFloatingMenu()"><img src="assets/imagens/icons/Subtract.svg" alt="">
+            </div>
             <div class="user-profile">
                 <img src="assets/imagens/icons/Shape.svg" alt="Usuário">
                 <div class="user-info">
@@ -102,40 +106,42 @@
                 </div>
             </div>
         </section>
-        <section class="cardsP">
+        <section class="blocosP">
             <div class="card1"><img src="assets/imagens/Bloco de acessos - 1366.svg" alt="">
             </div>
             <div class="card2">
                 <img src="assets/imagens/Bloco de reservas - 1366.svg" alt="">
             </div>
+        </section>
+        <section class="cardsP">
             <!-- Gráfico de barras -->
-            <div class="card chart-card">
+            <div class="card chart-card" id="grafico-container">
                 <div class="export-buttons">
-                    <button class="json-btn">JSON</button>
-                    <button class="pdf-btn">PDF</button>
-            <button class="csv-btn">CSV</button>
-            <button class="xls-btn">XLS</button>
-        </div>
-          <canvas id="barChart"></canvas>
-        </div>
-    
-        <!-- Outros gráficos -->
-        <div class="cards-bottom">
-            <div class="card small-chart"><canvas id="pieChart"></canvas></div>
-            <div class="card small-chart"><canvas id="lineChart"></canvas></div>
-            <div class="card small-chart"><canvas id="radarChart"></canvas></div>
-        </div>
-    </div>
-</section>
+                    <button class="json-btn" onclick="exportarJSON()">JSON</button>
+                    <button class="pdf-btn" onclick="exportarPDF()">PDF</button>
+                    <button class="csv-btn" onclick="exportarCSV()">CSV</button>
+                    <button class="xls-btn" onclick="exportarXLS()">XLS</button>
+                </div>
+                <canvas id="barChart"></canvas>
+            </div>
+
+            <!-- Outros gráficos -->
+            <div class="cards-bottom">
+                <div class="card small-chart"><canvas id="pieChart"></canvas></div>
+                <div class="card small-chart"><canvas id="lineChart"></canvas></div>
+                <div class="card small-chart"><canvas id="radarChart"></canvas></div>
+            </div>
+            </div>
+        </section>
 
 
-  
+
 
     </main>
 
 
 
-    
+
     <script>
 
         function toggleFloatingMenu() {
@@ -153,8 +159,8 @@
                 sidebar.classList.remove('show');
                 content.style.marginLeft = '0';
             } else {
-                sidebar.style.top = `${buttonRect.bottom}px`; // Começa do botão
-                sidebar.style.left = `${buttonRect.left}px`; // Alinha com o botão
+                sidebar.style.top = `${buttonRect.bottom}px`;
+                sidebar.style.left = `${buttonRect.left}px`;
                 sidebar.classList.add('show');
                 content.style.marginLeft = '250px';
             }
@@ -173,16 +179,16 @@
             const menu = document.getElementById(menuId);
             const isVisible = menu.style.display === 'block';
 
-            // Fechar todos os menus
+
             document.querySelectorAll('.men').forEach(m => m.style.display = 'none');
 
-            // Alternar visibilidade do menu clicado
+
             if (!isVisible) {
                 menu.style.display = 'block';
             }
         }
 
-        // Fechar menus ao clicar fora
+
         document.addEventListener('click', function (event) {
             if (!event.target.closest('.dropdown')) {
                 document.querySelectorAll('.men').forEach(m => m.style.display = 'none');
@@ -193,133 +199,246 @@
 
 
 
+        const labels = ['1', '5', '7', '8', '9', '11', '13', '15'];
+        const dados = [5, 7, 8, 4, 3, 10, 7, 5];
 
 
 
         const barCtx = document.getElementById('barChart').getContext('2d');
-new Chart(barCtx, {
-    type: 'bar',
-    data: {
-        labels: Array.from({ length: 30 }, (_, i) => i + 1),
-        datasets: [
-            {
-                label: 'Acessos',
-                data: [5, 8, 4, 7, 3, 10, 2, 7, 4, 9, 8, 5, 4, 7, 3, 10, 7, 4, 9, 5, 8, 7, 4, 3, 10, 2, 4, 3, 2, 9],
-                backgroundColor: '#fbb03b'
+        new Chart(barCtx, {
+            type: 'bar',
+            data: {
+                labels: Array.from({ length: 30 }, (_, i) => i + 1),
+                datasets: [
+                    {
+                        label: 'Acessos',
+                        data: [5, 8, 4, 7, 3, 10, 2, 7, 4, 9, 8, 5, 4, 7, 3, 10, 7, 4, 9, 5, 8, 7, 4, 3, 10, 2, 4, 3, 2, 9],
+                        backgroundColor: '#fbb03b'
+                    },
+                    {
+                        label: 'Reservas',
+                        data: [8, 5, 3, 4, 7, 2, 10, 4, 3, 5, 7, 4, 3, 4, 2, 7, 10, 4, 3, 9, 5, 8, 7, 4, 3, 10, 2, 4, 3, 9],
+                        backgroundColor: '#fd6e98'
+                    },
+                    {
+                        label: 'Visitantes',
+                        data: [4, 3, 2, 1, 3, 4, 5, 2, 4, 9, 6, 3, 4, 5, 6, 2, 3, 5, 9, 6, 5, 4, 2, 4, 7, 3, 5, 6, 4, 8],
+                        backgroundColor: '#4a90e2'
+                    },
+                    {
+                        label: 'Outros',
+                        data: [3, 2, 4, 6, 7, 5, 6, 3, 5, 7, 8, 5, 6, 7, 5, 6, 5, 3, 6, 4, 6, 7, 5, 4, 6, 7, 3, 5, 4, 5],
+                        backgroundColor: '#1c1c3b'
+                    }
+                ]
             },
-            {
-                label: 'Reservas',
-                data: [8, 5, 3, 4, 7, 2, 10, 4, 3, 5, 7, 4, 3, 4, 2, 7, 10, 4, 3, 9, 5, 8, 7, 4, 3, 10, 2, 4, 3, 9],
-                backgroundColor: '#fd6e98'
-            },
-            {
-                label: 'Visitantes',
-                data: [4, 3, 2, 1, 3, 4, 5, 2, 4, 9, 6, 3, 4, 5, 6, 2, 3, 5, 9, 6, 5, 4, 2, 4, 7, 3, 5, 6, 4, 8],
-                backgroundColor: '#4a90e2'
-            },
-            {
-                label: 'Outros',
-                data: [3, 2, 4, 6, 7, 5, 6, 3, 5, 7, 8, 5, 6, 7, 5, 6, 5, 3, 6, 4, 6, 7, 5, 4, 6, 7, 3, 5, 4, 5],
-                backgroundColor: '#1c1c3b'
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        display: false
+                    },
+                    title: {
+                        display: true,
+                        text: 'Total de Reservas por dia no mês'
+                    }
+                },
+                scales: {
+                    x: {
+                        grid: {
+                            display: false
+                        }
+                    },
+                    y: {
+                        beginAtZero: true,
+                        grid: {
+                            display: false
+                        }
+                    }
+                }
             }
-        ]
-    },
-    options: {
-  responsive: true,
-  plugins: {
-    legend: {
-      display: false
-    },
-    title: {
-      display: true,
-      text: 'Total de Reservas por dia no mês'
-    }
-  },
-  scales: {
-    x: {
-      grid: {
-        display: false // Remove linhas verticais
-      }
-    },
-    y: {
-      beginAtZero: true,
-      grid: {
-        display: false // Remove linhas horizontais
-      }
-    }
-  }
-}
-});
+        });
 
-// Gráfico de Pizza
-const pieCtx = document.getElementById('pieChart').getContext('2d');
-new Chart(pieCtx, {
-    type: 'pie',
-    data: {
-        labels: ['Tipo A', 'Tipo B', 'Tipo C', 'Tipo D', 'Tipo E', 'Tipo F'],
-        datasets: [{
-            data: [10, 7, 5, 8, 4, 3],
-            backgroundColor: [
-                '#fbb03b',
-                '#fd6e98',
-                '#4a90e2',
-                '#1c1c3b',
-                '#9b59b6',
-                '#6bd098'
-            ]
-        }]
-    }
-});
 
-// Gráfico de Linha
-const lineCtx = document.getElementById('lineChart').getContext('2d');
-new Chart(lineCtx, {
-    type: 'line',
-    data: {
-        labels: ['1', '5', '7', '8', '9', '11', '13', '15'],
-        datasets: [{
-            label: 'Reservas',
-            data: [5, 7, 8, 4, 3, 10, 7, 5],
-            borderColor: '#fd6e98',
-            backgroundColor: 'rgba(253, 110, 152, 0.3)',
-            fill: true,
-            tension: 0.3,
-            pointRadius: 5
-        }]
-    },
-    options: {
-        responsive: true,
-        plugins: {
-            legend: { display: false }
-        }
-    }
-});
+        const pieCtx = document.getElementById('pieChart').getContext('2d');
+        new Chart(pieCtx, {
+            type: 'pie',
+            data: {
+                labels: ['Tipo A', 'Tipo B', 'Tipo C', 'Tipo D', 'Tipo E', 'Tipo F'],
+                datasets: [{
+                    data: [10, 7, 5, 8, 4, 3],
+                    backgroundColor: [
+                        '#fbb03b',
+                        '#fd6e98',
+                        '#4a90e2',
+                        '#1c1c3b',
+                        '#9b59b6',
+                        '#6bd098'
+                    ]
+                }]
+            }
+        });
 
-// Gráfico de Radar
-const radarCtx = document.getElementById('radarChart').getContext('2d');
-new Chart(radarCtx, {
-    type: 'radar',
-    data: {
-        labels: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
-        datasets: [{
-            label: 'Reservas (%)',
-            data: [70, 50, 80, 40, 70, 30, 100],
-            backgroundColor: 'rgba(253, 110, 152, 0.2)',
-            borderColor: '#fd6e98',
-            pointBackgroundColor: '#fd6e98'
-        }]
-    },
-    options: {
-        scales: {
-            r: {
-                angleLines: { display: false },
-                suggestedMin: 0,
-                suggestedMax: 100
+
+        const lineCtx = document.getElementById('lineChart').getContext('2d');
+        new Chart(lineCtx, {
+            type: 'line',
+            data: {
+                labels: ['1', '5', '7', '8', '9', '11', '13', '15'],
+                datasets: [{
+                    label: 'Reservas',
+                    data: [5, 7, 8, 4, 3, 10, 7, 5],
+                    borderColor: '#fd6e98',
+                    backgroundColor: 'rgba(253, 110, 152, 0.3)',
+                    fill: true,
+                    tension: 0.3,
+                    pointRadius: 5
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: { display: false }
+                }
+            }
+        });
+
+        async function exportarJSON() {
+            const json = JSON.stringify(
+                labels.map((l, i) => ({ dia: l, reservas: dados[i] })),
+                null, 2
+            );
+            const blob = new Blob([json], { type: "application/json" });
+
+            if ('showSaveFilePicker' in window) {
+                const fileHandle = await window.showSaveFilePicker({
+                    suggestedName: "grafico.json",
+                    types: [{
+                        description: 'JSON File',
+                        accept: { 'application/json': ['.json'] }
+                    }]
+                });
+                const writable = await fileHandle.createWritable();
+                await writable.write(blob);
+                await writable.close();
+            } else {
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.setAttribute("download", "grafico.json");
+                link.click();
             }
         }
-    }
-});
 
 
+        async function exportarPDF() {
+            const chartElement = document.getElementById("lineChart");
 
+            const canvas = await html2canvas(chartElement);
+            const imgData = canvas.toDataURL("image/png");
+
+            const { jsPDF } = window.jspdf;
+            const pdf = new jsPDF();
+            const pageWidth = pdf.internal.pageSize.getWidth();
+            const imgWidth = pageWidth - 20;
+            const imgHeight = canvas.height * (imgWidth / canvas.width);
+
+            pdf.addImage(imgData, 'PNG', 10, 10, imgWidth, imgHeight);
+
+            const blob = pdf.output("blob");
+
+            if ('showSaveFilePicker' in window) {
+                const fileHandle = await window.showSaveFilePicker({
+                    suggestedName: "grafico.pdf",
+                    types: [{
+                        description: 'PDF File',
+                        accept: { 'application/pdf': ['.pdf'] }
+                    }]
+                });
+                const writable = await fileHandle.createWritable();
+                await writable.write(blob);
+                await writable.close();
+            } else {
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.setAttribute("download", "grafico.pdf");
+                link.click();
+            }
+        }
+
+
+        const radarCtx = document.getElementById('radarChart').getContext('2d');
+        new Chart(radarCtx, {
+            type: 'radar',
+            data: {
+                labels: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+                datasets: [{
+                    label: 'Reservas (%)',
+                    data: [70, 50, 80, 40, 70, 30, 100],
+                    backgroundColor: 'rgba(253, 110, 152, 0.2)',
+                    borderColor: '#fd6e98',
+                    pointBackgroundColor: '#fd6e98'
+                }]
+            },
+            options: {
+                scales: {
+                    r: {
+                        angleLines: { display: false },
+                        suggestedMin: 0,
+                        suggestedMax: 100
+                    }
+                }
+            }
+        });
+
+        async function exportarCSV() {
+            const csv = "Dia,Reservas\n" + labels.map((l, i) => `${l},${dados[i]}`).join("\n");
+            const blob = new Blob([csv], { type: "text/csv" });
+
+            if ('showSaveFilePicker' in window) {
+
+                const fileHandle = await window.showSaveFilePicker({
+                    suggestedName: "grafico.csv",
+                    types: [{
+                        description: 'CSV File',
+                        accept: { 'text/csv': ['.csv'] }
+                    }]
+                });
+                const writable = await fileHandle.createWritable();
+                await writable.write(blob);
+                await writable.close();
+            } else {
+
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.setAttribute("download", "grafico.csv");
+                link.click();
+            }
+        }
+
+        async function exportarXLS() {
+            let tabela = "<table><tr><th>Dia</th><th>Reservas</th></tr>";
+            for (let i = 0; i < labels.length; i++) {
+                tabela += `<tr><td>${labels[i]}</td><td>${dados[i]}</td></tr>`;
+            }
+            tabela += "</table>";
+            const blob = new Blob([tabela], { type: "application/vnd.ms-excel" });
+
+            if ('showSaveFilePicker' in window) {
+                const fileHandle = await window.showSaveFilePicker({
+                    suggestedName: "grafico.xls",
+                    types: [{
+                        description: 'Excel File',
+                        accept: { 'application/vnd.ms-excel': ['.xls'] }
+                    }]
+                });
+                const writable = await fileHandle.createWritable();
+                await writable.write(blob);
+                await writable.close();
+            } else {
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.setAttribute("download", "grafico.xls");
+                link.click();
+            }
+        }
     </script>
