Update: homeAdm até 768px.

--- a/project/homeAdm.html
+++ b/project/homeAdm.html
@@ -127,6 +127,9 @@
             sidebar.classList.add('show');
             content.style.marginLeft = '250px';
         }
+        if(window.innerWidth <= 768) {
+                content.style.marginLeft = '0';
+            }
     });
 
 
